doc-analyzer/inference-srv/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pytorch-inference
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pytorch-inference
  template:
    metadata:
      labels:
        app: pytorch-inference
    spec:
      containers:
      - name: pytorch-inference
        image: ghcr.io/superjeffcplusplus/inference-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
