doc-analyzer/inference-srv/kubernetes/inspect.yml
apiVersion: v1
kind: Pod
metadata:
  name: inference-inspector
spec:
  containers:
  - name: inference-inspector
    image: ghcr.io/superjeffcplusplus/classifier-inference-init
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /models
      name: pv
  imagePullSecrets:
        - name: ghcr-secret
  volumes:
  - name: pv
    persistentVolumeClaim:
      claimName: br2-classifier-inference-pvc
  restartPolicy: Never
