doc-analyzer/inference-srv/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: br2-classifier-inference
spec:
  selector:
    app: br2-classifier-inference
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
