doc-analyzer/inference-srv/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pytorch-inference
spec:
  rules:
  - host: doc-classifier.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pytorch-inference
            port:
              number: 80
